# ginroot-template-service

./: CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: aws.yaml  ci.yaml
app/: main.py  pytest.ini
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: templates.py
app/core/: config.py
app/crud/: __init__.py  crud_template.py
app/db/: base.py
app/models/: template.py
app/schemas/: __init__.py  template.py
app/tests/: conftest.py
app/tests/api/api_v1/: test_templates.py
app/tests/crud/: test_template.py
app/tests/utils/: template.py  utils.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml
chart/templates/tests/: test-connection.yaml
example_env/: .env_app  .env_postgres
postgres/: 02_TestEntries.sql  CreateDB.sql  Dockerfile
